<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBg"
    tools:context="com.igorchenwu.controllabledrawers.DrawerMenu">


    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corners"
        android:onClick="mainMenu"
        android:text="@string/back_button"
        android:textColor="@color/colorMainButtonText"
        android:textSize="20sp"/>

    <LinearLayout
        android:id="@+id/drawerPopUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/drawerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/drawer_name"
                android:textColor="@color/colorMainTitleText"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/drawerNameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drawer_name_field"
                android:textColor="@color/colorMainTitleText"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/drawerDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/drawer_description"
                android:textColor="@color/colorMainTitleText"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/drawerDescField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drawer_description_field"
                android:textColor="@color/colorMainTitleText"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <Button
            android:id="@+id/drawerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corners_active"
            android:onClick="toggleDrawer"
            android:padding="10dp"
            android:text="@string/open_close"
            android:textColor="@color/colorMainButtonText"/>

        <Button
            android:id="@+id/backButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corners"
            android:onClick="hidePopUp"
            android:padding="10dp"
            android:text="@string/back_button"
            android:textColor="@color/colorMainButtonText"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true">

        <LinearLayout
            android:id="@+id/drawerList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"/>
    </ScrollView>

</RelativeLayout>